--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
-            <h2 class="display-4">Testimonials</h2>
+            <h2 class="display-4">Extras!</h2>
             <p>Some extra interesting bits here!</p>
           </div>
         </div>
