--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Amadio, Inc.">
 
   <title>Amadio, Inc. - Italian Language Services</title>
-  <link rel="shortcut icon" type="image/jpg" href="/img/favicon.png"/>
+  <link rel="shortcut icon" type="image/jpg" href="/img/favicon.ico"/>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
