--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="col-lg-6">
           <div class="p-5">
             <h2 class="display-4">Services</h2>
-            <p>English into Italian translations, Italian into English translation, Closed captioning in Italian/English</p>
+            <p>English into Italian translations; Italian into English translation; Closed captioning in Italian/English</p>
           </div>
         </div>
       </div>
