--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Amadio, Inc.">
 
   <title>Amadio, Inc. - Italian Language Services</title>
-  <link rel="shortcut icon" type="image/jpg" href="/img/favicon.ico"/>
+  <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico"/>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -82,7 +82,7 @@
         <div class="col-lg-6">
           <div class="p-5">
             <h2 class="display-4">Services</h2>
-            <p>English into Italian translations; Italian into English translation; Closed captioning in Italian/English</p>
+            <p>English into Italian translations&#59; Italian into English translation&#59; Closed captioning in Italian/English</p>
           </div>
         </div>
       </div>
