--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Amadio, Inc.">
 
   <title>Amadio, Inc. - Italian Language Services</title>
-  <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="/img/favicon.ico?" type="image/x-icon" />
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
