--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Italian Language Services">
   <meta name="author" content="Amadio, Inc.">
 
-  <title>Amadio, Inc. - Italian Language Services</title>
+  <title>Amadio, Inc. | Italian Language Services</title>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?" >
 
   <!-- Bootstrap core CSS -->
@@ -52,7 +52,8 @@
       </div>
     </div>
   </header>
-
+	
+  <!-- About Section -->  
   <section>
     <div class="container">
       <div class="row align-items-center">
@@ -70,7 +71,8 @@
       </div>
     </div>
   </section>
-
+	
+  <!-- Services Section -->  
   <section>
     <div class="container">
       <div class="row align-items-center">
@@ -82,13 +84,17 @@
         <div class="col-lg-6">
           <div class="p-5">
             <h2 class="display-4">Services</h2>
-            <p>English into Italian translations&#59; Italian into English translation&#59; Closed captioning in Italian/English</p>
+			  <p>English into Italian translations<br>
+			  Italian into English translation</p>
+			  <p>Closed captioning in Italian/English</p>
+			  <p>Product Packaging, Manuals, Brochures, Infographics, Business Documents, Glossary Development, Court Documents, etc.</p>
           </div>
         </div>
       </div>
     </div>
   </section>
-
+	
+  <!-- Contact Section -->  
   <section>
     <div class="container">
       <div class="row align-items-center">
@@ -99,8 +105,10 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
-            <h2 class="display-4">Extras!</h2>
-            <p>Some extra interesting bits here!</p>
+            <h2 class="display-4">Contact</h2>
+			  <p><b>Email:</b><br><a  class="contact-link" href="mailto:michael@amadioinc.com">michael@amadioinc.com</a></p>
+			  <p><b>Phone:</b><br><a  class="contact-link" href="tel:18188825318">818-882-5318</a></p>
+			  <p><b>Mailing Address:</b><br>8335 Winnetka Ave. #445<br>Winnetka, CA 91306 | USA</p>
           </div>
         </div>
       </div>
@@ -110,8 +118,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-black">
     <div class="container">
-      <p class="m-0 text-center text-white small">8335 Winnetka Avenue, PMB #445, Winnetka, CA 91306</p>
-      <p class="m-0 text-center text-white small">Copyright &copy; 2021 Amadio, Inc.</p>
+      <p class="m-0 text-center text-white small">&copy; Copyright Amadio, Inc. All Reights Reserved.</p>
     </div>
     <!-- /.container -->
   </footer>
