--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="mailto:michael@amadioinc.com? subject=Mail from website!">Email</a>
+            <a class="nav-link" href="mailto:mike@amadioinc.com? subject=Mail from website!">Email</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="tel:18188825318">818-882-5318</a>
@@ -65,7 +65,8 @@
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
             <h2 class="display-4">About</h2>
-            <p>Michael Amadio, PhD., is an ATA Certified traslator based in Los Angeles, California. An Italian native, Dr. Amadio earned his doctorate degree in civil engineeting before transfering to the United States for work with Olivetti in 1968. Now fluent in both Italian and American English, Dr. Amadio can help with any of your Italian language needs.</p>
+            <p>Michael Amadio, PhD., is an <b>ATA Certified</b> traslator based in Los Angeles, California. An Italian native, Dr. Amadio earned his doctorate degree in civil engineeting before transfering to the United States for work with Olivetti in 1968. Now fluent in both Italian and American English, Dr. Amadio can help with any of your Italian language needs.</p>
+			<img class="img-fluid" src="ATA-logo.pgn" alt="American Translators Association Logo">
           </div>
         </div>
       </div>
@@ -84,10 +85,12 @@
         <div class="col-lg-6">
           <div class="p-5">
             <h2 class="display-4">Services</h2>
-			  <p>English into Italian translations<br>
+			  <p><b>ATA Certified since 2001</b></p>
+			  <p>English into Italian translation<br>
 			  Italian into English translation</p>
-			  <p>Closed captioning in Italian/English</p>
-			  <p>Product Packaging, Manuals, Brochures, Infographics, Business Documents, Glossary Development, Court Documents, etc.</p>
+			  <p>Subtitling in Italian/English</p>
+			  <p>Product Packaging, Manuals, Brochures, Infographics</p>
+			  <p>Business Documents, Certificates, Legal &amp; Court Documents</p>
           </div>
         </div>
       </div>
@@ -106,7 +109,7 @@
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
             <h2 class="display-4">Contact</h2>
-			  <p><b>Email:</b><br><a  class="contact-link" href="mailto:michael@amadioinc.com">michael@amadioinc.com</a></p>
+			  <p><b>Email:</b><br><a  class="contact-link" href="mailto:mike@amadioinc.com">mike@amadioinc.com</a></p>
 			  <p><b>Phone:</b><br><a  class="contact-link" href="tel:18188825318">818-882-5318</a></p>
 			  <p><b>Mailing Address:</b><br>8335 Winnetka Ave. #445<br>Winnetka, CA 91306 | USA</p>
           </div>
@@ -118,7 +121,8 @@
   <!-- Footer -->
   <footer class="py-5 bg-black">
     <div class="container">
-      <p class="m-0 text-center text-white small">&copy; Copyright Amadio, Inc. All Reights Reserved.</p>
+      <p class="m-0 text-center text-white small">American Traslators Association (ATA) Certified</p>
+	  <p class="m-0 text-center text-white small">&copy; Copyright Amadio, Inc. All Reights Reserved.</p>
     </div>
     <!-- /.container -->
   </footer>
