--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="p-5">
             <h2 class="display-4">About</h2>
             <p>Michael Amadio, PhD., is an <b>ATA Certified</b> traslator based in Los Angeles, California. An Italian native, Dr. Amadio earned his doctorate degree in civil engineeting before transfering to the United States for work with Olivetti in 1968. Now fluent in both Italian and American English, Dr. Amadio can help with any of your Italian language needs.</p>
-			<img class="img-fluid" src="ATA-logo.pgn" alt="American Translators Association Logo">
+			<div><img class="img-fluid" src="ATA-logo.png" alt="American Translators Association Logo"></div>
           </div>
         </div>
       </div>
