--- a/index.html
+++ b/index.html
@@ -122,10 +122,11 @@
 
   <!-- Footer -->
   <footer class="py-5 bg-black">
-    <div class="container">
-      <p class="m-0 text-center text-white small">American Traslators Association (ATA) Certified</p>
+    <div class="container text-center">
+	  <img class="img-fluid col-md-8 col-lg-6" src="img/ATA-certified-sm.png" alt="Certified Translator American Translators Association">
+	 </div>
 	  <p class="m-0 text-center text-white small">&copy; Copyright Amadio, Inc. All Reights Reserved.</p>
-    </div>
+
     <!-- /.container -->
   </footer>
 
