--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
         <div class="col-lg-6">
           <div class="p-5">
             <h2 class="display-4">Services</h2>
-			  <p><b>ATA Certified since 2001</b></p>
+
 			  <p>English into Italian translation<br>
 			  Italian into English translation</p>
-			  <p>Subtitling in Italian/English</p>
+			  <p>Legal &amp; Court Documents, Certificates, Business Documents</p>
 			  <p>Product Packaging, Manuals, Brochures, Infographics</p>
-			  <p>Business Documents, Certificates, Legal &amp; Court Documents</p>
+			  <p>Subtitling in Italian/English</p>
           </div>
         </div>
       </div>
