--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Amadio, Inc.">
 
   <title>Amadio, Inc. | Italian Language Services</title>
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?" >
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" >
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -35,7 +35,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="mailto:mike@amadioinc.com? subject=Mail from website!">Email</a>
+            <a class="nav-link" href="mailto:mike@amadioinc.com target="_blank" subject=Mail from website!" >Email</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="tel:18188825318">818-882-5318</a>
@@ -111,7 +111,7 @@
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
             <h2 class="display-4">Contact</h2>
-			  <p><b>Email:</b><br><a  class="contact-link" href="mailto:mike@amadioinc.com">mike@amadioinc.com</a></p>
+			  <p><b>Email:</b><br><a  class="contact-link" href="mailto:mike@amadioinc.com" target="_blank">mike@amadioinc.com</a></p>
 			  <p><b>Phone:</b><br><a  class="contact-link" href="tel:18188825318">818-882-5318</a></p>
 			  <p><b>Mailing Address:</b><br>8335 Winnetka Ave. #445<br>Winnetka, CA 91306 | USA</p>
           </div>
