--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="mailto:mike@amadioinc.com target="_blank" subject=Mail from website!" >Email</a>
+            <a class="nav-link" href="mailto:mike@amadioinc.com" target="_blank" subject="Mail from website!">Email</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="tel:18188825318">818-882-5318</a>
