--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <meta name="author" content="Amadio, Inc.">
 
   <title>Amadio, Inc. | Italian Language Services</title>
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" >
 
+  <!-- Favicons -->
+  <link href="img/favicon.ico" rel="icon">
+	
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
