--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
             <h2 class="display-4">About</h2>
-            <p>Michael Amadio, PhD., is an <b>American Translators Association (ATA) Certified</b> traslator based in Los Angeles, California. An Italian native, Dr. Amadio earned his doctorate degree in civil engineeting before transfering to the United States for work with Olivetti in 1968. Now fluent in both Italian and American English, Dr. Amadio can help with any of your Italian language needs.</p>
+            <p>Michael Amadio, PhD., is an <b>American Translators Association (ATA) Certified</b> traslator based in Los Angeles, California. An Italian native, Dr. Amadio earned his doctorate degree in marine and mechanical engineeting before transfering to the United States for work with Olivetti in 1968. Now fluent in both Italian and American English, Dr. Amadio can help with any of your Italian language needs.</p>
 			<div class="col-8 col-sm-6 col-lg-8 col-xl-6">
 				<img class="img-fluid" src="img/ATA-logo.png" alt="American Translators Association Logo">
 			  </div>
